Fix component links in docs site

--- a/packages/docs/src/content/components/action-banner/index.mdx
+++ b/packages/docs/src/content/components/action-banner/index.mdx
@@ -4,6 +4,7 @@ description: Banner for highlighting, and giving context to, a call-to-action
 inpagenav: true
 storybook: components-action-banner
 npm: nds-action-banner
+github: components/nds-action-banner
 template: detail
 ---
 
