--- a/packages/docs/src/content/components/breadcrumbs/index.mdx
+++ b/packages/docs/src/content/components/breadcrumbs/index.mdx
@@ -2,6 +2,10 @@
 title: Breadcrumbs
 description: A breadcrumb trail is a secondary navigation, that displays as a series of links, situated below the header.
 template: detail
+storybook: components-breadcrumbs
+inpagenav: true
+npm: nds-breadcrumbs
+github: components/nds-breadcrumbs
 ---
 
 ## Why?
