--- a/packages/docs/src/content/components/card/index.mdx
+++ b/packages/docs/src/content/components/card/index.mdx
@@ -1,9 +1,11 @@
 ---
 title: Card
 description: A flexible component for displaying an item like news or guidance within a list
-
 template: detail
-
+storybook: components-card
+inpagenav: true
+npm: nds-card
+github: components/nds-card
 ---
 
 ## Why?
