--- a/packages/docs/src/content/components/enhanced-pagination/index.mdx
+++ b/packages/docs/src/content/components/enhanced-pagination/index.mdx
@@ -2,10 +2,10 @@
 title: Enhanced pagination
 description: A way for users to navigate to numbered pages in a sequence of content
 template: detail
-storybook: components-enhanced-navigation
+storybook: components-enhanced-pagination
 inpagenav: true
-npm: https://www.npmjs.com/package/@nice-digital/nds-enhanced-pagination
-github: https://github.com/nice-digital/nice-design-system/tree/main/components/nds-enhanced-pagination
+npm: nds-enhanced-pagination
+github: components/nds-enhanced-pagination
 ---
 
 import { EnhancedPagination } from "@nice-digital/nds-enhanced-pagination";
