--- a/packages/docs/src/content/components/filters/index.mdx
+++ b/packages/docs/src/content/components/filters/index.mdx
@@ -4,8 +4,8 @@ description: A set of components to use to filter results
 template: detail
 storybook: components-filters
 inpagenav: true
-npm: https://www.npmjs.com/package/@nice-digital/nds-filters
-github: https://github.com/nice-digital/nice-design-system/tree/main/components/nds-filters
+npm: nds-filters
+github: components/nds-filters
 ---
 
 import {
