--- a/packages/docs/src/content/components/full-bleed/index.mdx
+++ b/packages/docs/src/content/components/full-bleed/index.mdx
@@ -3,6 +3,7 @@ title: Full Bleed
 description: Full viewport width component to accommodate background images for impact
 template: detail
 storybook: components-full-bleed
+github: components/nds-full-bleed
 npm: nds-full-bleed
 inpagenav: true
 ---
