--- a/packages/docs/src/content/components/in-page-nav/index.mdx
+++ b/packages/docs/src/content/components/in-page-nav/index.mdx
@@ -6,9 +6,10 @@ npm: nds-in-page-nav
 template: detail
 storybook: components-in-page-nav
 inpagenav: true
+github: components/nds-in-page-nav
 ---
 
-import { Alert } from "@nice-digital/nds-alert"
+import { Alert } from "@nice-digital/nds-alert";
 
 ## Why?
 
@@ -37,16 +38,16 @@ Detailed instructions for using the component in React can be found on NPM, see 
 
 Make sure the CSS and JS is loaded into your page. If you're using this on nice.org.uk and "niceorg-client" is selected then the CSS and JS will already be available.
 
-The basic version of the in-page-nav only requires the below data attribute to initialise on the page, with the __default__ settings, which can be overridden with data attributes.
+The basic version of the in-page-nav only requires the below data attribute to initialise on the page, with the **default** settings, which can be overridden with data attributes.
 
 #### Available settings
 
-| Option                      	| Data Attribute                                 	| Description                                                                                                                                               	| Default 	| Example                                                                                          	|
-|-----------------------------	|------------------------------------------------	|-----------------------------------------------------------------------------------------------------------------------------------------------------------	|---------	|--------------------------------------------------------------------------------------------------	|
-| Headings container selector 	| `data-in-page-nav-headings-container-selector` 	| This is a CSS-style selector for the scope of the page that you want the in-page-nav to use as its context.                                               	| `main`  	| `<div data-in-page-nav data-in-page-nav-headings-container-selector='.my-container'></div>`      	|
-| Headings to include         	| `data-in-page-nav-headings-selector`           	| Control for which headings you'd like to be included in the navigation. Defaults to `h2` and `h3`.                                                        	| `h2, h3` 	| `<div data-in-page-nav data-in-page-nav-headings-selector='h4, h5'></div>`                        	|
-| Headings to exclude         	| `data-in-page-nav-headings-exclude-selector`   	| Any CSS-style selectors you'd like to exclude.                                                                                                            	| none    	| `<div data-in-page-nav data-in-page-nav-headings-exclude-selector='.exclude-me-from-nav'></div>` 	|
-| Scroll tolerance            	| `data-in-page-nav-scroll-tolerance`            	| This is a pixel value to determine how close to the top of the viewport a heading has to be in order to be considered "active" and therefore highlighted. 	| `50`    	| `<div data-in-page-nav data-in-page-nav-scroll-tolerance='100'></div>`                           	|
+| Option                      | Data Attribute                                 | Description                                                                                                                                               | Default  | Example                                                                                          |
+| --------------------------- | ---------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- | -------- | ------------------------------------------------------------------------------------------------ |
+| Headings container selector | `data-in-page-nav-headings-container-selector` | This is a CSS-style selector for the scope of the page that you want the in-page-nav to use as its context.                                               | `main`   | `<div data-in-page-nav data-in-page-nav-headings-container-selector='.my-container'></div>`      |
+| Headings to include         | `data-in-page-nav-headings-selector`           | Control for which headings you'd like to be included in the navigation. Defaults to `h2` and `h3`.                                                        | `h2, h3` | `<div data-in-page-nav data-in-page-nav-headings-selector='h4, h5'></div>`                       |
+| Headings to exclude         | `data-in-page-nav-headings-exclude-selector`   | Any CSS-style selectors you'd like to exclude.                                                                                                            | none     | `<div data-in-page-nav data-in-page-nav-headings-exclude-selector='.exclude-me-from-nav'></div>` |
+| Scroll tolerance            | `data-in-page-nav-scroll-tolerance`            | This is a pixel value to determine how close to the top of the viewport a heading has to be in order to be considered "active" and therefore highlighted. | `50`     | `<div data-in-page-nav data-in-page-nav-scroll-tolerance='100'></div>`                           |
 
 #### Basic implementation
 
@@ -55,16 +56,20 @@ The basic version of the in-page-nav only requires the below data attribute to i
 ```
 
 #### With all possible options
+
 ```html
 <div
 	data-in-page-nav
 	data-in-page-nav-headings-container-selector="main"
 	data-in-page-nav-headings-selector="h2, h3"
 	data-in-page-nav-headings-exclude-selector=".js-ignore"
-	data-in-page-nav-scroll-tolerance="50">
-</div>
+	data-in-page-nav-scroll-tolerance="50"
+></div>
 ```
 
 <Alert>
-	<p>To clarify, the markup for the navigation will be automatically generated! No markup is required between the `div` tags.</p>
+	<p>
+		To clarify, the markup for the navigation will be automatically generated!
+		No markup is required between the `div` tags.
+	</p>
 </Alert>
