--- a/packages/docs/src/content/components/maintain-ratio/index.mdx
+++ b/packages/docs/src/content/components/maintain-ratio/index.mdx
@@ -1,9 +1,11 @@
 ---
 title: Maintain ratio
 description: Embed media and maintain an aspect ratio across devices
-
 template: detail
-
+storybook: foundations-maintain-ratio
+inpagenav: true
+github: components/nds-maintain-ratio
+npm: nds-maintain-ratio
 ---
 
 ## Why?
@@ -32,7 +34,7 @@ Embedded media, for example YouTube, videos generally need to keep a specific as
 </div>
 ```
 
-### 4x3
+### Ratio of 4x3
 
 ```
 <div class="maintain-ratio maintain-ratio--4-3">
