--- a/packages/docs/src/content/components/page-header/index.mdx
+++ b/packages/docs/src/content/components/page-header/index.mdx
@@ -2,6 +2,10 @@
 title: Page header
 description: Main heading and intro copy to introduce a page
 template: detail
+storybook: components-page-header
+inpagenav: true
+github: components/nds-page-header
+npm: nds-page-header
 ---
 
 ## Why?
