--- a/packages/docs/src/content/components/panel/index.mdx
+++ b/packages/docs/src/content/components/panel/index.mdx
@@ -4,6 +4,8 @@ description: Blocks to highlight or separate content
 template: detail
 storybook: components-panel
 npm: nds-panel
+github: components/nds-panel
+inpagenav: true
 ---
 
 ## Why?
