--- a/packages/docs/src/content/components/phase-banner/index.mdx
+++ b/packages/docs/src/content/components/phase-banner/index.mdx
@@ -1,9 +1,14 @@
 ---
 title: Phase banner
 description: Alpha and beta beta banners clearly identify non-live services
-
 template: detail
----## Why?
+storybook: components-phase-banner
+inpagenav: true
+github: components/nds-phase-banner
+npm: nds-phase-banner
+---
+
+## Why?
 
 If your service is on the NICE subdomain and is within alpha or beta you must have a phase banner which reflects this.
 
