--- a/packages/docs/src/content/components/previous-next/index.mdx
+++ b/packages/docs/src/content/components/previous-next/index.mdx
@@ -5,6 +5,8 @@ description: A way for users to navigate to previous or next pages in a sequence
 inpagenav: true
 template: detail
 storybook: components-previous-next
+github: components/nds-prev-next
+npm: nds-prev-next
 ---
 
 import { PrevNext } from "@nice-digital/nds-prev-next";
