--- a/packages/docs/src/content/components/stacked-navigation/index.mdx
+++ b/packages/docs/src/content/components/stacked-navigation/index.mdx
@@ -1,9 +1,11 @@
 ---
 title: Stacked navigation
 description: Navigation to support sub-pages within a section
-
 template: detail
-
+storybook: components-stacked-nav
+inpagenav: true
+github: components/nds-stacked-nav
+npm: nds-stacked-nav
 ---
 
 ## Why?
