--- a/packages/docs/src/content/components/tag/index.mdx
+++ b/packages/docs/src/content/components/tag/index.mdx
@@ -1,9 +1,11 @@
 ---
 title: Tag
 description: Tag component used for labelling items in a list
-
 template: detail
-
+storybook: foundations-tag
+inpagenav: true
+github: components/nds-tag
+npm: nds-tag
 ---
 
 ## Why?
