--- a/packages/docs/src/content/components/callout/index.mdx
+++ b/packages/docs/src/content/components/callout/index.mdx
@@ -1,9 +1,10 @@
 ---
 title: Callout
-description: ...
+description: To do
 inpagenav: true
 storybook: components-callout
 npm: nds-callout
+github: components/nds-callout
 template: detail
 ---
 
