--- a/packages/docs/src/content/components/hero/index.mdx
+++ b/packages/docs/src/content/components/hero/index.mdx
@@ -1,9 +1,11 @@
 ---
 title: Hero
 description: Introduce a site or sub-site with impact
-
 template: detail
-
+storybook: components-hero
+github: components/nds-hero
+npm: nds-hero
+inpagenav: true
 ---
 
 ## Why?
