Added column list docs

--- a/packages/docs/src/content/components/previous-next/index.mdx
+++ b/packages/docs/src/content/components/previous-next/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Previous and Next
 navigationLabel: Previous & Next
-description: A way for users to navigate to previous or next pages in a sequence of content.
+description: A way for users to navigate to previous or next pages in a sequence of content
 inpagenav: true
 template: detail
 storybook: components-previous-next
