--- a/packages/docs/src/content/components/breadcrumbs/index.mdx
+++ b/packages/docs/src/content/components/breadcrumbs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Breadcrumbs
-description: A breadcrumb trail is a secondary navigation, that displays as a series of links, situated below the header.
+description: A breadcrumb trail is a secondary navigation, that displays as a series of links, situated below the header
 template: detail
 storybook: components-breadcrumbs
 inpagenav: true
