Updated column list styles

--- a/packages/docs/src/content/components/column-list/index.mdx
+++ b/packages/docs/src/content/components/column-list/index.mdx
@@ -102,7 +102,7 @@ increasing as the viewport width increases, up to a maximum of 3 columns.
 The standard variant: 3 columns at the largest breakpoint, with a boxed layout.
 
 ```
-<ol class="column-list column-list--boxed">
+<ol class="column-list column-list--boxed column-list--three-cols">
   <li>One</li>
   <li>Two</li>
   <li>Three</li>
@@ -115,7 +115,7 @@ The standard variant: 3 columns at the largest breakpoint, with a boxed layout.
 An alternative variant: plain rendering, with a maximum of 2 columns.
 
 ```
-<ol class="column-list column-list--plain cols2">
+<ol class="column-list column-list--plain column-list--two-cols">
   <li>One</li>
   <li>Two</li>
   <li>Three</li>
