--- a/packages/storybook/stories/colours.stories.mdx
+++ b/packages/storybook/stories/colours.stories.mdx
@@ -7,20 +7,178 @@ import {Swatch} from "../storybook-components/Swatch.jsx";
 
 # Colours
 
-Colours are split into two sets:
+Colours are split into two groups:
 
-- Core colours (\_settings-colours-nice.scss)
-- Semantic colours (\_settings-colours-semantic.scss)
+- The NICE palette ([\_settings-colours-nice.scss](https://github.com/nice-digital/nice-design-system/blob/main/components/nds-core/scss/settings/_settings-colours-nice.scss))
+- Semantic colours ([\_settings-colours-semantic.scss](https://github.com/nice-digital/nice-design-system/blob/main/components/nds-core/scss/settings/_settings-colours-semantic.scss))
 
-The core colours should consist of NICE's colour palette.
+The NICE palette is grouped into primary, secondary and tertiary palettes.
+
 The semantic colours take these colours and apply them to specific scenarios, e.g. link colour, border colours etc.
 
+## The NICE palette
 
+### Primary palette
 
-## Core colours
-
-| Name                    | Value | Sample             |
-| ----------------------- | ----- | ------------------ |
+| Name | Value | Swatch |
+| ---- | ----- | ------ |
 | $nds-colour-nice-black | #222  | <Swatch colour="#222222" /> |
 | $nds-colour-nice-white | #fff  | <Swatch colour="#ffffff" /> |
 | $nds-colour-nice-teal | #004650  | <Swatch colour="#004650" /> |
+
+### Secondary palette
+
+| Name | Value | Swatch |
+| ---- | ----- | ------ |
+| $nds-colour-nice-purple | #451551 | <Swatch colour="#451551" /> |
+| $nds-colour-nice-cool-teal | #00506a | <Swatch colour="#00506a" /> |
+| $nds-colour-nice-rich-black | #0e0e0e | <Swatch colour="#0e0e0e" /> |
+| $nds-colour-nice-dark-grey | #393939 | <Swatch colour="#393939" /> |
+| $nds-colour-nice-grey-1 | #adadad | <Swatch colour="#adadad" /> |
+| $nds-colour-nice-grey-2 | #d6d6d6 | <Swatch colour="#d6d6d6" /> |
+| $nds-colour-nice-grey-3 | #e9e9e9 | <Swatch colour="#e9e9e9" /> |
+
+### Tertiary palette
+
+| Name | Value | Swatch |
+| ---- | ----- | ------ |
+| $nds-colour-nice-blue-1 | #233746 | <Swatch colour="#233746" /> |
+| $nds-colour-nice-blue-2 | #314c60 | <Swatch colour="#314c60" /> |
+| $nds-colour-nice-blue-3 | #517489 | <Swatch colour="#517489" /> |
+| $nds-colour-nice-ice-teal | #a2bdc1 | <Swatch colour="#a2bdc1" /> |
+| $nds-colour-nice-teal-1 | #4f7d83 | <Swatch colour="#4f7d83" /> |
+| $nds-colour-nice-teal-2 | #18646e | <Swatch colour="#18646e" /> |
+| $nds-colour-nice-teal-3 | #15434a | <Swatch colour="#15434a" /> |
+
+## Semantic colours
+
+### True black/white
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-true-black | - | #000 | <Swatch colour="#000" /> | Used for print styles |
+| $nds-colour-true-white | - | #fff | <Swatch colour="#fff" /> | Used for print styles |
+
+### Global
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-body | - | #f4f4f4 | <Swatch colour="#f4f4f4" /> | Off-white page background colour |
+| $nds-colour-text | $nds-colour-nice-black | #222 | <Swatch colour="#222" /> | Off-black body text colour |
+| $nds-colour-text-subtle | $nds-colour-nice-grey-1 | #adadad | <Swatch colour="#adadad" /> | Subtle text colour |
+| $nds-colour-text-inverse | $nds-colour-nice-white | #fff | <Swatch colour="#fff" /> | Inverse body text colour for use on dark background |
+| $nds-colour-icons | $nds-colour-nice-teal | #004650 | <Swatch colour="#004650" /> | Icons colour |
+
+### Links
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-link | - | #005ea5 | <Swatch colour="#005ea5" /> | Link text colour |
+| $nds-colour-link-hover | - | #2e8aca | <Swatch colour="#2e8aca" /> | Link hover colour |
+| $nds-colour-link-visited | - | #4c2c92 | <Swatch colour="#4c2c92" /> | Link visited colour |
+| $nds-colour-link-active | $nds-colour-nice-black | #222 | <Swatch colour="#222" /> | Link active colour |
+| $nds-colour-link-focus-text | - | #005ea5 | <Swatch colour="#005ea5" /> | Link focus text colour |
+
+### Inverse links
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-link-inverse | $nds-colour-nice-white | #fff | <Swatch colour="#fff" /> | Inverse link text colour |
+| $nds-colour-link-inverse-hover | $nds-colour-nice-grey-2 | #d6d6d6 | <Swatch colour="#d6d6d6" /> | Inverse link hover text colour |
+| $nds-colour-link-inverse-visited | $nds-colour-nice-white | #fff | <Swatch colour="#fff" /> | Inverse link visited text colour |
+| $nds-colour-link-inverse-active | $nds-colour-nice-grey-2 | #d6d6d6 | <Swatch colour="#d6d6d6" /> | Inverse link active text colour |
+| $nds-colour-link-inverse-focus-text | $nds-colour-nice-white | #fff | <Swatch colour="#fff" /> | Inverse link focus text colour |
+
+### Focus
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-focus | - | #0092a6 | <Swatch colour="#0092a6" /> | Focus colour |
+| $nds-colour-focus-inverse | $nds-colour-nice-white | #fff | <Swatch colour="#fff" /> | Inverse focus colour |
+
+### CTA buttons
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-btn-cta | $nds-colour-nice-purple | #451551 | <Swatch colour="#451551" /> | CTA button background colour |
+| $nds-colour-btn-cta-hover | - | #260b2d | <Swatch colour="#260b2d" /> | CTA button hover colour |
+| $nds-colour-btn-cta-text | $nds-colour-nice-white | #fff | <Swatch colour="#fff" /> | CTA button text colour |
+
+
+### Primary buttons
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-btn-primary | $nds-colour-nice-dark-grey | #393939 | <Swatch colour="#393939" /> | Primary button background colour |
+| $nds-colour-btn-primary-hover | $nds-colour-nice-rich-black | #0e0e0e | <Swatch colour="#0e0e0e" /> | Primary button hover colour |
+| $nds-colour-btn-primary-text | $nds-colour-nice-white | #fff | <Swatch colour="#fff" /> | Primary button text colour |
+
+### Secondary buttons
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-btn-secondary | - | #666 | <Swatch colour="#666" /> | Secondary button background colour |
+| $nds-colour-btn-secondary-hover | - | #333 | <Swatch colour="#333" /> | Secondary button hover colour |
+| $nds-colour-btn-secondary-text | $nds-colour-nice-white | #fff | <Swatch colour="#fff" /> | Primary button text colour |
+
+### Light buttons
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-btn-inverse | $nds-colour-nice-white | #fff | <Swatch colour="#fff" /> | Inverse (light) button background colour |
+| $nds-colour-btn-inverse-hover | $nds-colour-nice-grey-3 | #e9e9e9 | <Swatch colour="#e9e9e9" /> | Inverse (light) button hover colour |
+| $nds-colour-btn-inverse-text | $nds-colour-nice-rich-black | #0e0e0e | <Swatch colour="#0e0e0e" /> | Inverse (light) button text colour |
+
+### Backgrounds/borders
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-border | $nds-colour-nice-grey-1 | #adadad | <Swatch colour="#adadad" /> | Borders, separators, rules, keylines etc. |
+| $nds-colour-border-focus | $nds-colour-nice-blue-3 | #517489 | <Swatch colour="#517489" /> | Focused borders, separators, rules, keylines etc. |
+
+### Notifications/banners
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-agile-phase | - | #009ae9 | <Swatch colour="#009ae9" /> | Agile lifecycle phase banner |
+| $nds-colour-discovery | - | #b8008e | <Swatch colour="#b8008e" /> | Discovery agile lifecycle phase *(deprecated)* |
+| $nds-colour-alpha | - | #d5367f | <Swatch colour="#d5367f" /> | Alpha badges and banners *(deprecated)* |
+| $nds-colour-beta | - | #bd5826 | <Swatch colour="#bd5826" /> | Beta badges and banners *(deprecated)* |
+| $nds-colour-live | - | #578137 | <Swatch colour="#578137" /> | Live badges and banners *(deprecated)* |
+| $nds-colour-error | - | #ae0e1e | <Swatch colour="#ae0e1e" /> | Error text and border colour |
+| $nds-colour-error-background | - | #eac3c3 | <Swatch colour="#eac3c3" /> | Error background colour |
+| $nds-colour-caution | - | #835f24 | <Swatch colour="#835f24" /> | Caution text and border colour |
+| $nds-colour-caution-background | - | #ffdfa4 | <Swatch colour="#ffdfa4" /> | Caution background colour |
+| $nds-colour-info | - | #497b94 | <Swatch colour="#497b94" /> | Info text and border colour |
+| $nds-colour-info-background | - | #e6faff | <Swatch colour="#e6faff" /> | Info background colour |
+| $nds-colour-success | - | #3b8458 | <Swatch colour="#3b8458" /> | Success text and border colour |
+| $nds-colour-success-background | - | #eff7eb | <Swatch colour="#eff7eb" /> | Success background colour |
+| $nds-colour-mark | - | #fff999 | <Swatch colour="#fff999" /> | mark tag highlighter colour |
+
+### Guidance types
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-guidance-new | $nds-colour-nice-purple | #451551 | <Swatch colour="#451551" /> | New guidance colour |
+| $nds-colour-guidance-updated | $nds-colour-nice-blue-3 | #517489 | <Swatch colour="#517489" /> | Updated guidance colour |
+| $nds-colour-guidance-consultation | - | #557021 | <Swatch colour="#557021" /> | In consultation guidance colour |
+
+### Hero
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-colour-hero-background | $nds-colour-nice-teal-2 | #18646e | <Swatch colour="#18646e" /> | Background colour for the hero component |
+| $nds-colour-hero-border | $nds-colour-nice-teal-3 | #15434a | <Swatch colour="#15434a" /> | Colour for the border in the hero component |
+
+### Alerts
+
+| Name | Palette colour | Value | Swatch | Notes |
+| ---- | -------------- | ----- | ------ | ----- |
+| $nds-alert-info-border | - | #3479d0 | <Swatch colour="#3479d0" /> | Border colour for "info" alerts |
+| $nds-alert-info-background | - | #eff4fc | <Swatch colour="#eff4fc" /> | Background colour for "info" alerts |
+| $nds-alert-caution-border | - | #dc8a07 | <Swatch colour="#dc8a07" /> | Border colour for "caution" alerts |
+| $nds-alert-caution-background | - | #fbf7f1 | <Swatch colour="#fbf7f1" /> | Background colour for "caution" alerts |
+| $nds-alert-danger-border | - | #b50f23 | <Swatch colour="#b50f23" /> | Border colour for "danger" alerts |
+| $nds-alert-danger-background | - | #f9eced | <Swatch colour="#f9eced" /> | Background colour for "danger" alerts |
+| $nds-alert-success-border | - | #68c103 | <Swatch colour="#68c103" /> | Border colour for "success" alerts |
+| $nds-alert-success-background | - | #f3faeb | <Swatch colour="#f3faeb" /> | Background colour for "success" alerts |
