--- a/packages/storybook/stories/docs/colours.stories.mdx
+++ b/packages/storybook/stories/docs/colours.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
 
-import {Swatch} from "../storybook-components/Swatch.jsx";
+import {Swatch} from "../../storybook-components/Swatch.jsx";
 
 
 <Meta title="Docs/Colours" />
@@ -145,14 +145,14 @@ The semantic colours take these colours and apply them to specific scenarios, e.
 | $nds-colour-alpha | - | #d5367f | <Swatch colour="#d5367f" /> | Alpha badges and banners *(deprecated)* |
 | $nds-colour-beta | - | #bd5826 | <Swatch colour="#bd5826" /> | Beta badges and banners *(deprecated)* |
 | $nds-colour-live | - | #578137 | <Swatch colour="#578137" /> | Live badges and banners *(deprecated)* |
-| $nds-colour-error | - | #ae0e1e | <Swatch colour="#ae0e1e" /> | Error text and border colour |
-| $nds-colour-error-background | - | #eac3c3 | <Swatch colour="#eac3c3" /> | Error background colour |
-| $nds-colour-caution | - | #835f24 | <Swatch colour="#835f24" /> | Caution text and border colour |
-| $nds-colour-caution-background | - | #ffdfa4 | <Swatch colour="#ffdfa4" /> | Caution background colour |
-| $nds-colour-info | - | #497b94 | <Swatch colour="#497b94" /> | Info text and border colour |
-| $nds-colour-info-background | - | #e6faff | <Swatch colour="#e6faff" /> | Info background colour |
-| $nds-colour-success | - | #3b8458 | <Swatch colour="#3b8458" /> | Success text and border colour |
-| $nds-colour-success-background | - | #eff7eb | <Swatch colour="#eff7eb" /> | Success background colour |
+| $nds-colour-error | - | #b50f23 | <Swatch colour="#b50f23" /> | Error text and border colour |
+| $nds-colour-error-background | - | #f9eced | <Swatch colour="#f9eced" /> | Error background colour |
+| $nds-colour-caution | - | #dc8a07 | <Swatch colour="#dc8a07" /> | Caution text and border colour |
+| $nds-colour-caution-background | - | #fbf7f1 | <Swatch colour="#fbf7f1" /> | Caution background colour |
+| $nds-colour-info | - | #3479d0 | <Swatch colour="#3479d0" /> | Info text and border colour |
+| $nds-colour-info-background | - | #eff4fc | <Swatch colour="#eff4fc" /> | Info background colour |
+| $nds-colour-success | - | #68c103 | <Swatch colour="#68c103" /> | Success text and border colour |
+| $nds-colour-success-background | - | #f3faeb | <Swatch colour="#f3faeb" /> | Success background colour |
 | $nds-colour-mark | - | #fff999 | <Swatch colour="#fff999" /> | mark tag highlighter colour |
 
 ### Guidance types
@@ -169,16 +169,3 @@ The semantic colours take these colours and apply them to specific scenarios, e.
 | ---- | -------------- | ----- | ------ | ----- |
 | $nds-colour-hero-background | $nds-colour-nice-teal-2 | #18646e | <Swatch colour="#18646e" /> | Background colour for the hero component |
 | $nds-colour-hero-border | $nds-colour-nice-teal-3 | #15434a | <Swatch colour="#15434a" /> | Colour for the border in the hero component |
-
-### Alerts
-
-| Name | Palette colour | Value | Swatch | Notes |
-| ---- | -------------- | ----- | ------ | ----- |
-| $nds-alert-info-border | - | #3479d0 | <Swatch colour="#3479d0" /> | Border colour for "info" alerts |
-| $nds-alert-info-background | - | #eff4fc | <Swatch colour="#eff4fc" /> | Background colour for "info" alerts |
-| $nds-alert-caution-border | - | #dc8a07 | <Swatch colour="#dc8a07" /> | Border colour for "caution" alerts |
-| $nds-alert-caution-background | - | #fbf7f1 | <Swatch colour="#fbf7f1" /> | Background colour for "caution" alerts |
-| $nds-alert-danger-border | - | #b50f23 | <Swatch colour="#b50f23" /> | Border colour for "danger" alerts |
-| $nds-alert-danger-background | - | #f9eced | <Swatch colour="#f9eced" /> | Background colour for "danger" alerts |
-| $nds-alert-success-border | - | #68c103 | <Swatch colour="#68c103" /> | Border colour for "success" alerts |
-| $nds-alert-success-background | - | #f3faeb | <Swatch colour="#f3faeb" /> | Background colour for "success" alerts |
