--- a/packages/storybook/stories/docs/typography.stories.mdx
+++ b/packages/storybook/stories/docs/typography.stories.mdx
@@ -12,61 +12,73 @@ Within NDS Core's SCSS folder, typography settings and functions can be found in
 
 ## Headings
 
+### Heading 1 (2.75rem)
+
 <Canvas>
 	<h1>Heading 1</h1>
 </Canvas>
 
-### Usage:
+#### Usage:
 
 - Use an `h1` element, or
 - Apply a class of `h1`, or
 - Use the `nds-h1` SASS mixin
 
+### Heading 2 (2.25rem)
+
 <Canvas>
 	<h2>Heading 2</h2>
 </Canvas>
 
-### Usage:
+#### Usage:
 
 - Use an `h2` element, or
 - Apply a class of `h2`, or
 - Use the `nds-h2` SASS mixin
 
+### Heading 3 (1.75rem)
+
 <Canvas>
 	<h3>Heading 3</h3>
 </Canvas>
 
-### Usage:
+#### Usage:
 
 - Use an `h3` element, or
 - Apply a class of `h3`, or
 - Use the `nds-h3` SASS mixin
 
+### Heading 4 (1.25rem)
+
 <Canvas>
 	<h4>Heading 4</h4>
 </Canvas>
 
-### Usage:
+#### Usage:
 
 - Use an `h4` element, or
 - Apply a class of `h4`, or
 - Use the `nds-h4` SASS mixin
 
+### Heading 5 (1.125rem)
+
 <Canvas>
 	<h5>Heading 5</h5>
 </Canvas>
 
-### Usage:
+#### Usage:
 
 - Use an `h5` element, or
 - Apply a class of `h5`, or
 - Use the `nds-h5` SASS mixin
 
+### Heading 6 (1rem)
+
 <Canvas>
 	<h6>Heading 6</h6>
 </Canvas>
 
-### Usage:
+#### Usage:
 
 - Use an `h6` element, or
 - Apply a class of `h6`, or
@@ -81,7 +93,7 @@ Within NDS Core's SCSS folder, typography settings and functions can be found in
 	<p>In libero nisi, laoreet vel lacinia vel, malesuada id eros. Pellentesque tempor interdum tortor non malesuada. Curabitur nec consequat ex, rhoncus dictum sapien. In varius nisl metus. Curabitur sollicitudin venenatis elit, a feugiat nulla. Vivamus luctus in dui ut maximus. Morbi quis nisl est. Ut a ex lectus. Etiam interdum malesuada felis, vitae malesuada felis sagittis a.</p>
 </Canvas>
 
-#### Usage:
+##### Usage:
 
 - Use a `p` element, or
 - Apply a class of `p`, or
@@ -93,7 +105,7 @@ Within NDS Core's SCSS folder, typography settings and functions can be found in
 	<p className="lead">In libero nisi, laoreet vel lacinia vel, malesuada id eros. Pellentesque tempor interdum tortor non malesuada. Curabitur nec consequat ex, rhoncus dictum sapien. In varius nisl metus. Curabitur sollicitudin venenatis elit, a feugiat nulla. Vivamus luctus in dui ut maximus. Morbi quis nisl est. Ut a ex lectus. Etiam interdum malesuada felis, vitae malesuada felis sagittis a.</p>
 </Canvas>
 
-#### Usage:
+##### Usage:
 
 - Apply a class of `lead` to a `p` element, or
 - Use the `nds-lead` SASS mixin
@@ -104,7 +116,7 @@ Within NDS Core's SCSS folder, typography settings and functions can be found in
 	<small>In libero nisi, laoreet vel lacinia vel, malesuada id eros. Pellentesque tempor interdum tortor non malesuada. Curabitur nec consequat ex, rhoncus dictum sapien. In varius nisl metus. Curabitur sollicitudin venenatis elit, a feugiat nulla. Vivamus luctus in dui ut maximus. Morbi quis nisl est. Ut a ex lectus. Etiam interdum malesuada felis, vitae malesuada felis sagittis a.</small>
 </Canvas>
 
-#### Usage:
+##### Usage:
 
 - Use a `small` element, or
 - Apply a class of `small`
@@ -119,7 +131,7 @@ Within NDS Core's SCSS folder, typography settings and functions can be found in
 
 ### Inverse link style
 
-#### Usage:
+##### Usage:
 
 - Default style for all links (i.e. `a` elements)
 - use the `nds-link-default` mixin
@@ -128,6 +140,6 @@ Within NDS Core's SCSS folder, typography settings and functions can be found in
 	<p style={{background: "#333", padding: "10px"}}><a className="link-inverse" href="https://www.nice.org.uk">Here is an inverted link to NICE!</a></p>
 </Canvas>
 
-#### Usage:
+##### Usage:
 
 - use the `nds-link-inverse` mixin
